ws_lidar/log/build_2025-02-22_15-25-57/gpsPubSub/stdout_stderr.log
running egg_info
writing ../../build/gpsPubSub/gpsPubSub.egg-info/PKG-INFO
writing dependency_links to ../../build/gpsPubSub/gpsPubSub.egg-info/dependency_links.txt
writing entry points to ../../build/gpsPubSub/gpsPubSub.egg-info/entry_points.txt
writing requirements to ../../build/gpsPubSub/gpsPubSub.egg-info/requires.txt
writing top-level names to ../../build/gpsPubSub/gpsPubSub.egg-info/top_level.txt
reading manifest file '../../build/gpsPubSub/gpsPubSub.egg-info/SOURCES.txt'
writing manifest file '../../build/gpsPubSub/gpsPubSub.egg-info/SOURCES.txt'
running build
running build_py
copying gpsPubSub/subscribeGPS.py -> /home/cewan/Automated-Tour-Car/ws_lidar/build/gpsPubSub/build/lib/gpsPubSub
running install
running install_lib
copying /home/cewan/Automated-Tour-Car/ws_lidar/build/gpsPubSub/build/lib/gpsPubSub/subscribeGPS.py -> /home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/python3.10/site-packages/gpsPubSub
byte-compiling /home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/python3.10/site-packages/gpsPubSub/subscribeGPS.py to subscribeGPS.cpython-310.pyc
  File "/home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/python3.10/site-packages/gpsPubSub/subscribeGPS.py", line 34
    x = x * #14.3
            ^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/python3.10/site-packages/gpsPubSub-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/gpsPubSub/gpsPubSub.egg-info to /home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/python3.10/site-packages/gpsPubSub-0.0.0-py3.10.egg-info
running install_scripts
Installing publisher script to /home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/gpsPubSub
Installing subscriber script to /home/cewan/Automated-Tour-Car/ws_lidar/install/gpsPubSub/lib/gpsPubSub
writing list of installed files to '/home/cewan/Automated-Tour-Car/ws_lidar/build/gpsPubSub/install.log'
